feat(gradle):fix gradle