@@ -140,11 +140,14 @@ test {
         exclude 'org/tron/common/runtime/vm/WithdrawRewardTest.class'
     }
     maxHeapSize = "1024m"
-    doFirst {
-        // Restart the JVM after every 100 tests to avoid memory leaks and ensure test isolation
-        forkEvery = 100
-        jvmArgs "-XX:MetaspaceSize=128m","-XX:MaxMetaspaceSize=256m", "-XX:+UseG1GC"
-    }
+    // Restart the JVM after every 100 tests to avoid memory leaks and ensure test isolation
+    forkEvery = 100
+    jvmArgs "-XX:MetaspaceSize=128m",
+            "-XX:MaxMetaspaceSize=256m",
+            "-XX:+UseG1GC",
+            "-Xloggc:gc.log",
+            "-XX:+PrintGCDetails",
+            "-XX:+HeapDumpOnOutOfMemoryError"
 }
 
 jacocoTestReport {
